src/tests/testfiles/ternary-operator/types-6.txt
Error at 4:6: Logic operator operands must have the same type (have int and float)
(1 || 2.0 ? c[0] : 0);
 ^
Error at 4:17: Ternary conditional operator alternatives should be of equal type
(1 || 2.0 ? c[0] : 0);
            ^
